[gd_scene load_steps=11 format=1]

[ext_resource path="res://Radiko.gd" type="Script" id=1]
[ext_resource path="res://Kamero.gd" type="Script" id=2]
[ext_resource path="res://Materialo.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tiparoj/jomhuria.fnt" type="BitmapFont" id=4]
[ext_resource path="res://GUI/rekomenci.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 1800, 10 )

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = 60.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.0117647, 0.607843, 0.898039, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=3]

content_margin/left = 60.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.117647, 0.533333, 0.898039, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = 60.0
content_margin/bottom = -1.0
bg_color = Color( 0.0117647, 0.607843, 0.898039, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[sub_resource type="StyleBoxFlat" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = 60.0
content_margin/bottom = -1.0
bg_color = Color( 0.117647, 0.533333, 0.898039, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="Radiko" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Kamero" type="Camera2D" parent="."]

offset = Vector2( 300, 500 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 2 )

[node name="Materialoj" type="Node2D" parent="."]

z/z = 1

[node name="Materialo" parent="Materialoj" instance=ExtResource( 3 )]

transform/pos = Vector2( 300, 650 )

[node name="Materialo1" parent="Materialoj" instance=ExtResource( 3 )]

transform/pos = Vector2( 310, 450 )

[node name="Materialo2" parent="Materialoj" instance=ExtResource( 3 )]

transform/pos = Vector2( 300, 180 )

[node name="Materialo3" parent="Materialoj" instance=ExtResource( 3 )]

transform/pos = Vector2( 320, -100 )

[node name="Materialo4" parent="Materialoj" instance=ExtResource( 3 )]

transform/pos = Vector2( 420, -330 )

[node name="Materialo5" parent="Materialoj" instance=ExtResource( 3 )]

transform/pos = Vector2( 260, -500 )

[node name="Materialo6" parent="Materialoj" instance=ExtResource( 3 )]

transform/pos = Vector2( 350, -790 )

[node name="PreParto" type="Area2D" parent="."]

visibility/visible = false
input/pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="Aspekto" type="Polygon2D" parent="PreParto"]

polygon = Vector2Array( 10, -10, -10, -10, -10, 10, 10, 10 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 880 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

transform/pos = Vector2( 0, 880 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Aspekto" type="Polygon2D" parent="StaticBody2D"]

transform/pos = Vector2( 0, -80 )
polygon = Vector2Array( -1810, 950, 1890, 950, 1890, 2100, -1810, 2100 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Kanvaso" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="H_rulumilo" type="HScrollBar" parent="Kanvaso"]

visibility/visible = false
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 70.0
margin/right = 0.0
margin/bottom = 100.0
custom_styles/grabber_hilite = SubResource( 2 )
custom_styles/grabber = SubResource( 3 )
range/min = -700.0
range/max = 1300.0
range/step = 0.0
range/page = 0.0
range/value = 300.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="V_rulumilo" type="VScrollBar" parent="Kanvaso"]

anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 30.0
margin/top = 70.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/grabber_hilite = SubResource( 4 )
custom_styles/grabber = SubResource( 5 )
range/min = -3000.0
range/max = 500.0
range/step = 0.0
range/page = 0.0
range/value = 500.0
range/exp_edit = false
range/rounded = false
custom_step = -1.0

[node name="Fono" type="Polygon2D" parent="Kanvaso"]

polygon = Vector2Array( 0, 0, 0, 70, 600, 70, 600, 0 )
uv = Vector2Array(  )
color = Color( 1, 1, 1, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="vido_Materialo" type="Label" parent="Kanvaso"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 20.0
margin/top = -10.0
margin/right = 130.0
margin/bottom = 79.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "123"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Rekomencu" type="Button" parent="Kanvaso"]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 530.0
margin/top = 0.0
margin/right = 670.0
margin/bottom = 140.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[connection signal="value_changed" from="Kanvaso/H_rulumilo" to="." method="_on_H_rulumilo_value_changed"]

[connection signal="value_changed" from="Kanvaso/V_rulumilo" to="." method="_on_V_rulumilo_value_changed"]

[connection signal="pressed" from="Kanvaso/Rekomencu" to="." method="_on_Rekomencu_pressed"]


